--- a/Contact.css
+++ b/Contact.css
@@ -32,7 +32,7 @@ header {
 .navbar {
   height: 7rem;
   width: 100vw;
-  padding: 0rem 10rem;
+  padding: 0rem 5vw;
   padding-top: 2rem;
   display: flex;
   justify-content: space-between;
@@ -128,14 +128,15 @@ header {
   border: solid 1px var(--main-color);
 }
 /*-------------footer-------------*/
-html {
+body{
   position: relative;
+  padding-bottom: 4rem;
 }
 footer {
   position: absolute;
   bottom: 1rem;
-  right: 0;
   left: 0;
+  right: 0;
   text-align: center;
   font-size: 1.2rem;
 }
