--- a/Education.css
+++ b/Education.css
@@ -29,7 +29,7 @@ header {
 .navbar {
   height: 7rem;
   width: 100vw;
-  padding: 0rem 10rem;
+  padding: 0rem 5vw;
   padding-top: 2rem;
   display: flex;
   justify-content: space-between;
@@ -68,11 +68,10 @@ header {
   align-items: flex-start;
 }
 .hero__background {
-  width: 69rem;
-  height: 47rem;
+  width: 55%;
 }
 .hero__content {
-  width: 46rem;
+  width: 40%;
   margin: 14rem 10rem;
   display: inline-block;
 }
@@ -115,14 +114,15 @@ header {
   letter-spacing: 1px;
 }
 /*-------------footer-------------*/
-html {
+body{
   position: relative;
+  padding-bottom: 4rem;
 }
 footer {
   position: absolute;
   bottom: 1rem;
-  right: 0;
   left: 0;
+  right: 0;
   text-align: center;
   font-size: 1.2rem;
 }
