--- a/Projects.css
+++ b/Projects.css
@@ -29,7 +29,7 @@ header {
 .navbar {
   height: 7rem;
   width: 100vw;
-  padding: 0rem 10rem;
+  padding: 0rem 5vw;
   padding-top: 2rem;
   display: flex;
   justify-content: space-between;
@@ -69,10 +69,10 @@ header {
   padding: 2rem 0;
 }
 .hero__background {
-  width: 56rem;
+  width: 45%;
 }
 .hero__contentContainer {
-  width: 60rem;
+  width: 50%;
   display: inline-block;
 }
 .hero__contentContainer * {
@@ -103,6 +103,7 @@ header {
   flex-wrap: wrap;
 }
 .pageTwo__cards {
+  position: relative;
   background-color: whitesmoke;
   margin-bottom: 5rem;
   padding: 2rem;
@@ -124,6 +125,9 @@ header {
   font-size: 1.8rem;
 }
 .cards__date {
+  position: absolute;
+  left: 1.4rem;
+  bottom: 1.4rem;
   font-family: "Courier New", Courier, monospace;
   font-size: 1.4rem;
   color: #888;
