--- a/Skills.css
+++ b/Skills.css
@@ -23,13 +23,13 @@ li {
   list-style: none;
 }
 header {
-  height: 100vh;
+  min-height: 100vh;
 }
 /* Start of navbar */
 .navbar {
   height: 7rem;
   width: 100vw;
-  padding: 0rem 10rem;
+  padding: 0rem 5vw;
   padding-top: 2rem;
   display: flex;
   justify-content: space-between;
@@ -66,14 +66,14 @@ header {
   align-items: center;
   width: 100vw;
   padding-left: 8rem;
+  padding-top: 5rem;
 }
 .hero__content {
-  width: 60rem;
+  width: 50%;
   display: inline-block;
 }
 .hero__background {
-  width: 62rem;
-  height: 58rem;
+  width: 48%;
 }
 .hero__heading--main {
   margin-bottom: 6rem;
@@ -100,29 +100,24 @@ header {
   background-color: var(--main-color);
 }
 .hero__li:first-of-type .hero__heading--sub::after {
-  width: 46rem;
+  width: 49rem;
 }
 .hero__li:nth-of-type(2) .hero__heading--sub::after {
-  width: 31rem;
+  width: 43rem;
 }
 .hero__li:nth-of-type(3) .hero__heading--sub::after {
-  width: 36rem;
+  width: 45rem;
 }
-/*----------Start of pageTwo--------------*/
-.pageTwo {
-  height: 50rem;
-  background-color: chocolate;
-}
-
 /*-------------footer-------------*/
-html {
+body{
   position: relative;
+  padding-bottom: 4rem;
 }
 footer {
   position: absolute;
   bottom: 1rem;
-  right: 0;
   left: 0;
+  right: 0;
   text-align: center;
   font-size: 1.2rem;
 }
